Add migration script and update readme

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "client": "cd ./client && npm start",
-    "dev": "concurrently \"npm run start\" \"npm run client\""
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
+    "migrate": "node migrate.js",
+    "postinstall": "npm migrate && cd ./client && npm install"
   },
   "keywords": [],
   "author": "",
