--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "cd ./client && npm start",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "migrate": "node migrate.js",
-    "postinstall": "npm migrate && cd ./client && npm install"
+    "postinstall": "npm run migrate && cd ./client && npm install"
   },
   "keywords": [],
   "author": "",
