--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DATABASE_URL=postgres://postgres:123@localhost:5432/ecommerce
 # Server Configuration
 SERVER_PORT=8000
 SERVER_HOST=localhost
+
+
+# Elevania Configuration
+API_KEY=721407f393e84a28593374cc2b347a98
+BASE_URL=http://api.elevenia.co.id/rest
