--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "lodash.debounce": "^4.0.8",
     "mobx": "^6.3.10",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "superagent": "^6.1.0",
